kubernetes/apigateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
spec:
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: tibbo93/apigateway:kube
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              httpHeaders:
            initialDelaySeconds: 15
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: apigateway
spec:
  selector:
    app: apigateway
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
