kubernetes/connessioni-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connessioni
spec:
  selector:
    matchLabels:
      app: connessioni
  template:
    metadata:
      labels:
        app: connessioni
    spec:
      containers:
        - name: connessioni
          image: tibbo93/connessioni-service:kube
          ports:
            - name: http
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: connessioni
spec:
  selector:
    app: connessioni
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
