kubernetes/connessioniservicedb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connessioniservicedb
spec:
  selector:
    matchLabels:
      app: connessioniservicedb
  template:
    metadata:
      labels:
        app: connessioniservicedb
    spec:
      containers:
        - name: connessioniservicedb
          image: postgres
          ports:
            - name: http
              containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: connessioniservicedb
  labels:
    app: connessioniservicedb
spec:
  selector:
    app: connessioniservicedb
  ports:
    - protocol: TCP
      port: 5432
