kubernetes/consul-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
spec:
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - name: consul
          image: consul
          ports:
            - name: http
              containerPort: 8500

---
apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  selector:
    app: consul
  ports:
    - protocol: TCP
      port: 8500
      targetPort: 8500
