kubernetes/enigmiseguitiservicedb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enigmiseguitiservicedb
spec:
  selector:
    matchLabels:
      app: enigmiseguitiservicedb
  template:
    metadata:
      labels:
        app: enigmiseguitiservicedb
    spec:
      containers:
        - name: enigmiseguitiservicedb
          image: postgres
          ports:
            - name: http
              containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: enigmiseguitiservicedb
  labels:
    app: enigmiseguitiservicedb
spec:
  selector:
    app: enigmiseguitiservicedb
  ports:
    - protocol: TCP
      port: 5432
