kubernetes/enigmiservicedb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enigmiservicedb
spec:
  selector:
    matchLabels:
      app: enigmiservicedb
  template:
    metadata:
      labels:
        app: enigmiservicedb
    spec:
      containers:
        - name: enigmiservicedb
          image: postgres
          ports:
            - name: http
              containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: enigmiservicedb
  labels:
    app: enigmiservicedb
spec:
  selector:
    app: enigmiservicedb
  ports:
    - protocol: TCP
      port: 5432
