kubernetes/apigateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enigmi-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: apigateway
      http:
        paths:
          - pathType: Prefix
            path: /enigmi
            backend:
              service:
                name: enigmi
                port:
                  number: 8080
          - pathType: Prefix
            path: /
            backend:
              service:
                name: apigateway
                port:
                  number: 8080
